# ClashKingAPI

./: .dockerignore  .gitignore  BUGFIXES.txt  Dockerfile  Dockerfile.beta  MIGRATION.md  README.md  example.env  go.mod  go.sum  main.go  main.py  new.py  package-lock.json  package.json  pyproject.toml  requirements.txt  sonar-project.properties  startup.py  stats_http_test.go  swagger.go  swagger_routes_test.go  swagger_test.go  test.py
.claude/: settings.local.json
.github/workflows/: ci.yml  dev-image-builder.yml  main.yml  prod-image-builder.yml
assets/json/: builder_league.json  buildings.json  hero_equipment.json  heroes.json  pets.json  spells.json  supers.json  townhalls.json  translations.json  troops.json
docs/: privacy_compliance.md
internal/docs/: docs.go  swagger.json  swagger.yaml
internal/models/: accounts.go  auth.go  clan.go  guilds.go  mobile.go  server.go  tracking.go  v1capital.go  war.go
internal/routes/: accounts.go  accounts_test.go  activity.go  announcements.go  app_announcements.go  app_config.go  auth.go  auth_test.go  authz.go  authz_test.go  bot_profile.go  bot_profile_test.go  capital.go  cdn.go  clan.go  clan_join_leave_test.go  config.go  dashboard_access.go  dates.go  enums.go  exported.go  (+59 more)
models/: app.py  clan.py
routers/: bans.py  capital.py  clan.py  game_data.py  global_data.py  internal.py  leaderboards.py  leagues.py  legends.py  list.py  other.py  player.py  ranking.py  redirect.py  rosters.py  server_info.py  stats.py  tickets.py  utility.py  war.py
static/: custom.css  main.js  output.css
templates/: index.html  roster.html  roster_management.html  roster_management_backup.html  roster_management_old.html  tickets.html  war.html
utils/: auth_utils.py  cache_decorator.py  config.py  custom_coc.py  database.py  dependencies.py  discord_api.py  email_service.py  password_validator.py  security.py  security_middleware.py  sentry_utils.py  time.py  utils.py
(+328 files in other folders)
