[project]
name = "clashking-api"
version = "0.1.0"
description = "API serving Clash of Clans stats for ClashKing"

requires-python = "==3.13.7"
dependencies = [
    "aiocache",
    "aiohttp",
    "bcrypt",
    "cryptography",
    "expiring-dict",
    "fastapi",
    "fastapi-mail",
    "gunicorn",
    "hashids",
    "hikari @ git+https://github.com/hikari-py/hikari.git@2.5.0",
    "linkd",
    "matplotlib",
    "openpyxl",
    "orjson",
    "pandas",
    "passlib",
    "pendulum",
    "pillow",
    "pydantic>=2.10.3",
    "pyjwt",
    "pymongo>=4.5.0",
    "python-multipart",
    "python-dotenv",
    "python-snappy",
    "redis",
    "requests",
    "sentry-sdk",
    "slowapi",
    "uvloop; sys_platform != 'win32'",
    "uvicorn",
    "fastapi-cache2>=0.2.2",
    "psutil>=7.1.3",
    "clashy-py>=25.12.5",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
]

[tool.uv]
package = false
